Integration of Ollamas Gemma2 12b. 2 Separate environments used for compatibility as Lanchain runs of pydance v1 and Ollama on v2. Future integration of webscapting and automation

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ venv/
 env/
 ENV/
 .venv/
+venv_langchain/
+venv_ollama/
 
 # Environment variables - CRITICAL: Never commit these!
 .env
@@ -62,6 +64,16 @@ data/raw/*
 data/processed/*
 *.csv
 *.parquet
+
+# RAG Generated Files (auto-generated, don't commit)
+chunks.json
+embeddings.npy
+faiss_index.bin
+retrieved_chunks.json
+answer.txt
+
+# Keep the PDF manual
+!fridge-owners-manual.pdf
 
 # Jupyter Notebook
 .ipynb_checkpoints
